--- a/myStyles.css
+++ b/myStyles.css
@@ -14,3 +14,17 @@
 body {
   background-color: gray;
 }
+
+.black {
+  background-color: black;
+  color: white;
+}
+.white {
+  background-color: white;
+  color: black;
+}
+.white,
+.black {
+  font-size: 100px;
+  text-align: center;
+}
